# sibna_protocol_v6

./: CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  requirements.txt
bindings/cpp/: CMakeLists.txt
bindings/cpp/include/: sibna.hpp
bindings/cpp/src/: sibna_impl.cpp
bindings/python/: Cargo.toml  pyproject.toml  setup.py
bindings/python/sibna/: __init__.py
bindings/python/src/: lib.rs
core/: Cargo.toml  build.rs
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: fuzz_decrypt.rs
core/src/: lib.rs
core/src/crypto/: mod.rs  random.rs
core/src/ffi/: context.rs  mod.rs
core/src/handshake/: builder.rs
core/src/keystore/: store.rs
core/src/ratchet/: session.rs  state.rs
docs/: API_REFERENCE.md  BENCHMARKS.md  CONTRIBUTING.md  DEPLOYMENT.md  TEST_VECTORS.md  TROUBLESHOOTING.md  whitepaper.md
docs/protocol/: ratchet.md  security.md  specs.md
examples/: cli_messenger.py  file_vault.py  full_session_walkthrough.py  identity_tool.py
server/: Dockerfile  main.py
tests/: integration_test.py  integration_test_full.py  test_relay_full.py
